[tool.poetry]
name = "reddit-mod-bot"
version = "0.1.0"
description = ""
authors = ["zaptrem <zaptrem@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.1"
asyncpraw = "^7.7.1"
openai = "^1.10.0"
aiohttp = "^3.9.1"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
